# TalesAR

./: gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: TalesArApp.cpp  TalesArApp.hpp  main.cpp
app/src/main/cpp/ar/: TalesArSession.cpp  TalesArSession.hpp
app/src/main/cpp/engine/: TalesAREngine.cpp  TalesAREngine.hpp  TalesArEngine.cpp  TalesArEngine.hpp
app/src/main/cpp/exception/: Exception.cpp  Exception.hpp
app/src/main/cpp/facade/: JniFacade.cpp  JniFacade.hpp
app/src/main/cpp/logging/: AndroidLog.cpp  AndroidLog.h  Log.hpp
app/src/main/cpp/utils/: NativeWindowWrapper.hpp  Utils.cpp  Utils.hpp
app/src/main/java/com/mistersomov/talesar/: TalesARActivity.kt  TalesArActivity.kt
app/src/main/java/com/mistersomov/talesar/common/facade/: JniFacade.kt
app/src/main/java/com/mistersomov/talesar/common/helper/: CameraPermissionHelper.kt
app/src/main/java/com/mistersomov/talesar/logging/: Logger.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mistersomov/talesar/logging/: LoggerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
